# BridgeIt

./: .gitignore  BridgeIt.desktop  LICENSE  README.md  bridgeit.spec  dmg_settings.py  install-desktop-entry.sh  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bridgeit/: __main__.py  config.py  main.py
bridgeit/gui/: canvas.py  controls.py  icons.py  mainwindow.py  preview.py  themes.py
bridgeit/pipeline/: _subprocess_worker.py  analyze.py  bridge.py  export.py  pipeline.py  remove_bg.py  trace.py
bridgeit/utils/: geometry.py
docs/: index.html  robots.txt  sitemap.xml
