[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bridgeit"
version = "0.6.0"
description = "Convert images to fabrication-ready SVGs with automatic bridge generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["laser-cutting", "svg", "vector", "fabrication", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
    "rembg>=2.0.50",
    "opencv-python>=4.9.0",
    "shapely>=2.0.3",
    "svgwrite>=1.4.3",
    "Pillow>=10.2.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
]

[project.scripts]
bridgeit = "bridgeit.main:main"

[project.gui-scripts]
bridgeit-gui = "bridgeit.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridgeit*"]

[tool.setuptools.package-data]
bridgeit = ["assets/*.svg", "assets/*.png"]
